2015-03-27 Pierre Wieser <pwieser@trychlos.org>

	Close pages and flush DBMS before backup (todo #765)

	* src/mysql/ofa-mysql-backup.c: flush tables before backup.

	* src/mysql/ofa-mysql-idbms.c,
	* src/mysql/ofa-mysql-idbms.h: new ofa_mysql_query() function.

	* src/ui/ofa-main-window.c: close pages before backup.

	Reconciliation: replace 'Accept' with 'Reconciliate' (todo #767)

	* src/ui/ofa-buttons-box.c,
	* src/ui/ofa-buttons-box.h:
	- add 'Reconciliate' button
	- remove unused 'Accept all' button.

	* src/ui/ofa-reconciliation.c: updated accordingly.

	Reconciliation: have an 'Unreconciliate' button (todo #768)

	* src/ui/ofa-buttons-box.c,
	* src/ui/ofa-buttons-box.h: add 'Unreconciliate' button.

	* src/ui/ofa-reconciliation.c: updated accordingly.

	Reconciliation: replace GtkFileChooser button with an 'Import' one,
	setting the labels under the buttons (todo #769).

	* src/ui/ofa-bat-utils.c,
	* src/ui/ofa-bat-utils.h: new files.

	* src/ui/Makefile.am,
	* src/ui/ofa-bats-page.c,
	* src/ui/ofa-reconciliation.c: updated accordingly.

	Improve the reconciliation scheme with DBMS v25.

	* src/api/ofo-concil-def.h,
	* src/api/ofo-concil.h,
	* src/core/ofo-concil.c,
	* src/api/ofs-concil-id.h,
	* src/core/ofs-concil-id.c,
	* src/core/ofa-collection-prot.h,
	* src/core/ofa-collection.c,
	* src/core/ofa-collection.h,
	* src/core/ofa-concil-collection.c,
	* src/core/ofa-concil-collection.h,
	* src/core/ofa-icollector.c,
	* src/core/ofa-icollector.h,
	* src/core/ofa-iconcil.c,
	* src/core/ofa-iconcil.h: new files.

	* src/api/ofo-dossier.h: ofo_dossier_get_next_concil(): new method.

	* src/core/ofo-dossier-ddl.c,
	* src/core/ofo-dossier-ddl.h: new dbmodel_to_v25() method.

	* src/api/Makefile.am,
	* src/core/Makefile.am,
	* src/core/ofo-dossier.c,
	* src/core/ofo-entry.c,
	* src/ui/ofa-bat-properties-bin.c,
	* src/ui/ofa-bat-store.c,
	* src/ui/ofa-reconciliation.c
	* src/ui/ofa-reconciliation.h: updated accordingly.

	* src/api/ofo-bat.h,