@@ -434,8 +434,6 @@
 
  764 2015- 3-23 entry_load_dataset(): add order clause as an argument
 
- 765 2015- 3-25 when backing up, close all pages
-
  766 2015- 3-26 replace ofaIDataset interface by ofaICollector
 
  770
@@ -3433,6 +3431,9 @@
                 use case: two peage tickets which are debited together
                 + remediate lcl-201408.pdf imported bat file
      2015- 3-21 done - git #a6bfe8a
+
+ 765 2015- 3-25 when backing up, close all pages
+     2015- 3-27 done - git #22005b1
 
  767 2015- 3-27 Reconciliation: replace 'Accept' with 'Reconciliate'
      2015- 3-27 done - git #0f42251
